...
        if #available(iOS 11.0, *) {
            navigationItem.largeTitleDisplayMode = .always
        }

        // TODO: Check if chapter selection even makes sense
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            title: "Kapitel wählen",
            style: .plain,
            target: self,
            action: #selector(MenuViewController.didSelectChapterSelection(_:))
        )
    }

...

    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = UITableViewCell(style: .value1, reuseIdentifier: nil)
        cell.accessoryType = .disclosureIndicator

        if indexPath.section == 0 && indexPath.row == 0 {
            cell.textLabel?.text = "Abfragen"
        }

        if indexPath.section == 0 && indexPath.row == 1 {
            cell.textLabel?.text =  "Karteikarten"
        }

...
