...
}

extension QuizViewController: QuizViewControllerInput {

    func displayEmptyStar() {
        navigationItem.rightBarButtonItem?.image = UIImage(named: "star_unselected")
        navigationItem.rightBarButtonItem?.accessibilityLabel = "star unselected"
    }

    func displayFullStar() {
        navigationItem.rightBarButtonItem?.image = UIImage(named: "star_selected")
        navigationItem.rightBarButtonItem?.accessibilityLabel = "star selected"
    }
...
